--- a/ABM.DropboxMP3.ConsoleApp/packages.config
+++ b/ABM.DropboxMP3.ConsoleApp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Dropbox.Api" version="6.23.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="TaskTimer" version="1.0.0" targetFramework="net48" />
 </packages>
