working after prepared for demo

--- a/ABM.DropboxMP3.ConsoleApp/App.config
+++ b/ABM.DropboxMP3.ConsoleApp/App.config
@@ -3,6 +3,13 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+  <appSettings>
+    <add key="ApiKey" value="YourAPIKey"/>
+    <add key="AppToken" value="YourAPIToken"/>
+    <add key="AppSecret" value= "YourAppSecret"/>
+    <add key="WaitingTimeForConverting" value="10000"/><!--time in milliseconds-->
+    <add key="ConvertedFileExtension" value=".conv"/><!-- extension of the converted file-->
+   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
