--- a/ABM.DropboxMP3.ConsoleApp/ABM.DropboxMP3.ConsoleApp.csproj
+++ b/ABM.DropboxMP3.ConsoleApp/ABM.DropboxMP3.ConsoleApp.csproj
@@ -40,6 +40,7 @@
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Xml.Linq" />
